--- a/index.html
+++ b/index.html
@@ -11,7 +11,28 @@
 <body>
   <div class="container">
     <h1>Currency Calculator</h1>
-    </div>
+    <p>Enter amount</p>
+    <div class="form">
+      <div class="conversionWrapper">
+        <div class="inputWrapper">
+          <label for="currencyFrom">Currency to convert from</label>
+          <select id="currencyFrom">
+                </select>
+          <input type="number" name="currencyFrom" class="currencyFrom" placeholder="0.00" step="0.01" />
+        </div>
+        <!-- .inputWrapper -->
+        <div class="inputWrapper">
+          <label for="currencyTo">Currency to convert to:</label>
+          <select id="currencyTo">
+                </select>
+          <input type="number" name="currencyTo" class="currencyTo" placeholder="0.00" step="0.01" disabled />
+        </div>
+        <!-- .inputWrapper -->
+        <button class="convertButton">Convert</button>
+      </div>
+      <!-- .conversionWrapper -->
+      <div class="err"></div>
+  </div>
 
 </body>
 
