js script onload event handler

--- a/index.html
+++ b/index.html
@@ -32,8 +32,10 @@
       </div>
       <!-- .conversionWrapper -->
       <div class="err"></div>
+	  <p>Designed by Kelvin Otuya</p>
   </div>
 
 </body>
-
+<!-- .container -->
+  <script src="js/script.js"></script>
 </html>
