--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
 	  <p>Designed by Kelvin Otuya</p>
   </div>
 <!-- .container -->
+  <script src="js/promise.js"></script>
+  <script src="js/fetch.js"></script>
+  <script src="js/idb.js"></script>
   <script src="js/script.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
 </html>
