--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Currency Calculator</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+	  <meta charset="UTF-8">
+	  <title>Currency Calculator</title>
+	  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
+	  <link rel="stylesheet" href="css/style.css" />
+	  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	  <meta name="HandheldFriendly" content="true">
 </head>
 
 <body>
@@ -18,7 +21,7 @@
           <label for="currencyFrom">Currency to convert from</label>
           <select id="currencyFrom">
                 </select>
-          <input type="number" name="currencyFrom" class="currencyFrom" placeholder="0.00" step="0.01" />
+          <input type="number" name="currencyFrom" class="currencyFrom" placeholder="0.00" step="0.01" required="" title="amount is required!">
         </div>
         <!-- .inputWrapper -->
         <div class="inputWrapper">
@@ -42,4 +45,4 @@
   <script src="js/index.js"></script>
 </body>
 
-</html>
+</html> 
