pushing to github

--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
 	  <p>Designed by Kelvin Otuya</p>
   </div>
 <!-- .container -->
-  <script src="js/promise.js"></script>
-  <script src="js/fetch.js"></script>
-  <script src="js/idb.js"></script>
-  <script src="js/index.js"></script>
-  <script src="js/script.js"></script>
+  <script src="/promise.js"></script>
+  <script src="/fetch.js"></script>
+  <script src="/idb.js"></script>
+  <script src="/index.js"></script>
+  <script src="/script.js"></script>
   
 </body>
 
