--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
 
 <head>
-	  <meta charset="UTF-8">
-	  <title>Currency Calculator</title>
-	  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
-	  <link rel="stylesheet" href="css/style.css" />
-	  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
-	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	  <meta name="HandheldFriendly" content="true">
+  <meta charset="UTF-8">
+  <title>Currency Calculator</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
@@ -21,7 +18,7 @@
           <label for="currencyFrom">Currency to convert from</label>
           <select id="currencyFrom">
                 </select>
-          <input type="number" name="currencyFrom" class="currencyFrom" placeholder="0.00" step="0.01" required="" title="amount is required!">
+          <input type="number" name="currencyFrom" class="currencyFrom" placeholder="0.00" step="0.01" />
         </div>
         <!-- .inputWrapper -->
         <div class="inputWrapper">
@@ -38,12 +35,11 @@
 	  <p>Designed by Kelvin Otuya</p>
   </div>
 <!-- .container -->
-  <script src="./promise.js"></script>
-  <script src="./fetch.js"></script>
-  <script src="./idb.js"></script>
-  <script src="./index.js"></script>
-  <script src="./script.js"></script>
-  
+  <script src="js/promise.js"></script>
+  <script src="js/fetch.js"></script>
+  <script src="js/idb.js"></script>
+  <script src="js/script.js"></script>
+  <script src="js/index.js"></script>
 </body>
 
-</html> 
+</html>
