--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <title>Currency Calculator</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
-  <link rel="stylesheet" href="css/style.css" />
+	  <meta charset="UTF-8">
+	  <title>Currency Calculator</title>
+	  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet" />
+	  <link rel="stylesheet" href="css/style.css" />
+	  <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	  <meta name="HandheldFriendly" content="true">
 </head>
 
 <body>
